forge/tests/errors/multi_error.fg
// Error test: multiple errors in one file
fn main() {
  let x = 42
  y = 10
  println(string(z))
}
